<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HardModeActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="513dp"
        android:layout_marginTop="52dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.889"
        app:rowCount="5">

        <ImageView
            android:id="@+id/h_carta17"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="0"
            app:layout_row="4"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta18"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="1"
            app:layout_row="4"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta19"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="2"
            app:layout_row="4"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta20"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="3"
            app:layout_row="4"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta1"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta2"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta3"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta4"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta5"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta6"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta7"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta8"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="3"
            app:layout_row="1"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta9"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta10"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta11"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta12"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="3"
            app:layout_row="2"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta13"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="0"
            app:layout_row="3"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta14"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="1"
            app:layout_row="3"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta15"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="2"
            app:layout_row="3"
            app:srcCompat="@drawable/carta_coperta" />

        <ImageView
            android:id="@+id/h_carta16"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:onClick="ock_carta"
            app:layout_column="3"
            app:layout_row="3"
            app:srcCompat="@drawable/carta_coperta" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#97FFFFFF"
        android:fontFamily="casual"
        android:text="@string/modalita_difficile"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentativi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/txtv_tentativi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />
    <FrameLayout
        android:id="@+id/transparentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>